# microservice

./: README.md  docker-compose.yml
api/: pyproject.toml
web/: pyproject.toml
